子View超过父布局处理

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,21 +9,22 @@
     </style>
 
 
+
     <!--密码输入layout-->
     <declare-styleable name="PassWordLayoutStyle">
         <attr name="box_input_color" format="reference"></attr>//输入框输入状态颜色
         <attr name="box_no_input_color" format="reference"></attr>//输入框未输入状态颜色
         <attr name="input_line_color" format="reference"></attr>//输入线颜色
         <attr name="text_input_color" format="reference"></attr>//文本颜色
-        <attr name="interval_width" format="integer"></attr>//间隔
-        <attr name="item_width" format="integer"></attr>//子View宽
-        <attr name="item_height" format="integer"></attr>//子View高
-        <attr name="draw_txt_size" format="integer"></attr>//文本大小
-        <attr name="draw_box_line_size" format="integer"></attr>//输入线条大小
+        <attr name="interval_width" format="dimension"></attr>//间隔
+        <attr name="item_width" format="dimension"></attr>//子View宽
+        <attr name="item_height" format="dimension"></attr>//子View高
+        <attr name="draw_txt_size" format="dimension"></attr>//文本大小
+        <attr name="draw_box_line_size" format="dimension"></attr>//输入线条大小
         <attr name="is_show_input_line" format="boolean"></attr>//是否显示输入线
         <attr name="pass_inputed_type">//密码输入显示内容
-            <flag name="stars" value="0" />
-            <flag name="circle" value="1" />
+            <flag name="circle" value="0" />
+            <flag name="stars" value="1" />
             <flag name="text" value="2" />
         </attr>
         <attr name="box_draw_type">//密码框形状
@@ -37,6 +38,5 @@
             <flag name="eight" value="8" />
         </attr>
     </declare-styleable>
-
 
 </resources>
