--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,9 @@
         android:layout_below="@+id/tv_tipsinfo"
         android:layout_marginTop="44px"
         app:box_draw_type="rect"
-        app:interval_width="4"
-        app:item_height="35"
-        app:item_width="35"
+        app:interval_width="4dp"
+        app:item_height="35dp"
+        app:item_width="35dp"
         app:pass_inputed_type="stars"
         app:pass_leng="six" />
 
@@ -26,9 +26,9 @@
         android:layout_below="@+id/tv_tipsinfo"
         android:layout_marginTop="44px"
         app:box_draw_type="circle"
-        app:interval_width="4"
-        app:item_height="38"
-        app:item_width="38"
+        app:interval_width="4dp"
+        app:item_height="38dp"
+        app:item_width="38dp"
         app:pass_inputed_type="circle"
         app:pass_leng="six" />
 
@@ -39,9 +39,9 @@
         android:layout_below="@+id/tv_tipsinfo"
         android:layout_marginTop="44px"
         app:box_draw_type="line"
-        app:draw_txt_size="20"
-        app:interval_width="6"
-        app:pass_inputed_type="text"
+        app:draw_txt_size="20dp"
+        app:interval_width="6dp"
+        app:pass_inputed_type="circle"
         app:pass_leng="four" />
 
     <Button
